fix java8 failures